[package]
name = "rust-chip8-esp32"
version = "0.1.0"
authors = ["user"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "rust-chip8-esp32"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1.0.96"
esp-idf-sys = { version = "0.36.1", features = ["binstart"] }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
ssd1306 = "0.10.0"

[build-dependencies]
embuild = "0.33"